# oca-partner-contact

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
.github/workflows/: test.yml
base_country_state_translatable/i18n/: de.po
base_location/: README.rst
base_location/i18n/: am.po  ar.po  base_location.pot  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el_GR.po  en_GB.po  es.po  es_AR.po  es_CL.po  es_CO.po  es_CR.po  es_DO.po  es_EC.po  es_MX.po  es_PE.po  es_PY.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_BE.po  fr_CA.po  fr_CH.po  gl.po  gl_ES.po  he.po  hr.po  hr_HR.po  hu.po  id.po  it.po  ja.po  ko.po  (+29 more)
base_location/views/: res_city_view.xml  res_city_zip_view.xml  res_country_view.xml
base_location_geonames_import/: README.rst  __manifest__.py
base_location_geonames_import/i18n/: am.po  ar.po  base_location_geonames_import.pot  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el_GR.po  en_GB.po  es.po  es_AR.po  es_CL.po  es_CO.po  es_CR.po  es_DO.po  es_EC.po  es_ES.po  es_MX.po  es_PE.po  es_PY.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fr_CH.po  gl.po  gl_ES.po  he.po  hr.po  hr_HR.po  hu.po  id.po  it.po  ja.po  ko.po  (+29 more)
base_partner_company_group/: README.rst
base_partner_sequence/: README.rst
base_partner_sequence/i18n/: am.po  (+52 more)
partner_contact_birthdate/: README.rst  __manifest__.py
partner_contact_department/: README.rst  __manifest__.py
partner_contact_job_position/: README.rst  __manifest__.py
partner_contact_personal_information_page/: README.rst  __manifest__.py
partner_duns/: README.rst  __manifest__.py
partner_fax/: README.rst  __manifest__.py
partner_firstname/: README.rst  __manifest__.py
partner_identification/: README.rst
partner_identification_gln/: README.rst  __manifest__.py
partner_identification_unique_by_category/: README.rst  __manifest__.py
partner_industry_secondary/: README.rst  __manifest__.py
partner_multi_relation/: README.rst  __manifest__.py
partner_priority/: README.rst  __manifest__.py
partner_salesperson_propagate/: README.rst  __manifest__.py
partner_search_alias/: README.rst
partner_stage/: README.rst
partner_title_order/: README.rst
setup/_metapackage/: pyproject.toml  setup.py
(+325 files in other folders)
