[project]
name = "odoo-addons-oca-partner-contact"
version = "18.0.20241202.0"
dependencies = [
    "odoo-addon-base_location==18.0.*",
    "odoo-addon-base_partner_company_group==18.0.*",
    "odoo-addon-base_partner_sequence==18.0.*",
    "odoo-addon-partner_firstname==18.0.*",
    "odoo-addon-partner_identification==18.0.*",
    "odoo-addon-partner_identification_unique_by_category==18.0.*",
    "odoo-addon-partner_pricelist_search==18.0.*",
    "odoo-addon-partner_ref_unique==18.0.*",
    "odoo-addon-partner_tz==18.0.*",
    "odoo-addon-sale_partner_company_group==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
