[project]
name = "odoo-addons-oca-partner-contact"
version = "18.0.20250124.0"
dependencies = [
    "odoo-addon-account_partner_company_group==18.0.*",
    "odoo-addon-base_location==18.0.*",
    "odoo-addon-base_location_geonames_import==18.0.*",
    "odoo-addon-base_partner_company_group==18.0.*",
    "odoo-addon-base_partner_sequence==18.0.*",
    "odoo-addon-crm_partner_company_group==18.0.*",
    "odoo-addon-partner_company_group==18.0.*",
    "odoo-addon-partner_contact_access_link==18.0.*",
    "odoo-addon-partner_contact_personal_information_page==18.0.*",
    "odoo-addon-partner_fax==18.0.*",
    "odoo-addon-partner_firstname==18.0.*",
    "odoo-addon-partner_identification==18.0.*",
    "odoo-addon-partner_identification_gln==18.0.*",
    "odoo-addon-partner_identification_unique_by_category==18.0.*",
    "odoo-addon-partner_industry_secondary==18.0.*",
    "odoo-addon-partner_multi_relation==18.0.*",
    "odoo-addon-partner_pricelist_search==18.0.*",
    "odoo-addon-partner_priority==18.0.*",
    "odoo-addon-partner_ref_unique==18.0.*",
    "odoo-addon-partner_stage==18.0.*",
    "odoo-addon-partner_title_order==18.0.*",
    "odoo-addon-partner_tz==18.0.*",
    "odoo-addon-sale_partner_company_group==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
